fix: Mermaid label text is truncated

--- a/src/assets/stylesheets/redmine-kroki.css
+++ b/src/assets/stylesheets/redmine-kroki.css
@@ -11,6 +11,10 @@
   height: 100%;
 }
 
+.kroki svg .label {
+  font-size: 15px;
+}
+
 .kroki.dark svg {
   filter: invert(1) hue-rotate(180deg);
 }
